# webui-monaco-prompt

./: .gitignore  LICENSE  README.md  __init__.py  editor_check.html  extension.json  monaco-vim  package-lock.json  package.json  pyproject.toml  setup.cfg  snippets.py  tsconfig.json  tsconfig.test.json  webpack.comfy.dev.js  webpack.comfy.js  webpack.common.js  webpack.dev.js  webpack.editor.js  webpack.prod.js
.github/workflows/: publish.yml  release.yml
comfy/: codicon.css  editor.worker.mjs  main.bundle.js  main.bundle.js.LICENSE.txt
javascript/: editor.worker.js  main.bundle.js  main.bundle.js.LICENSE.txt
scripts/: api.py
src/: comfy.ts  completion.ts  index.ts  main.ts  monaco_utils.ts  utils.ts
src/@types/: gradio.d.ts  monaco-vim.d.ts
src/comfyui/: api.ts  index.ts  link.ts  settings.ts  types.ts  utils.ts
src/comfyui/languages/: comfy-dynamic-prompt.ts  comfy-prompt.ts  index.ts
src/comfyui/widget/: find_widget.ts  index.css  index.ts  replace_widget.ts
src/languages/: index.ts  sd-dynamic-prompt.ts  sd-prompt.ts
src/styles/: index.css  index.d.ts
