[project]
name = "webui-monaco-prompt"
description = "Make it possible to edit the prompt using the Monaco Editor, an editor implementation used in VSCode.\nNOTE: This extension supports both ComfyUI and A1111 simultaneously."
version = "0.2.0"
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/Taremin/webui-monaco-prompt"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "taremin"
DisplayName = "webui-monaco-prompt"
Icon = ""
